--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+#main {
+    overflow: hidden;
+}
+
 /* HEADER NOTIFY */
 .header__notify {
     width: 100%;
@@ -45,8 +49,24 @@
 
 .header__notify-right-items:last-child {
     margin-right: 0;
+    position: relative;
 }
 
+.header__notify-right-items:last-child::before {
+    content: "1";
+    position: absolute;
+    top: 10px;
+    right: 70px;
+    width: 20px;
+    height: 20px;
+    background-color: var(--white-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 50%;
+    color: var(--primary-color);
+    display: none; 
+    align-items: center;
+    justify-content: center;
+}
 /* LOGIN */
 .header__menu-login {
     position: absolute;
@@ -398,11 +418,24 @@ span.content__product-link-desc {
     justify-content: center;
 }
 
+.container__menu-list-link:hover .container__menu-list-link-btn {
+    display: block;
+}
+
+.container__menu-list-link:hover .container__menu-list-link-name,
+.container__menu-list-link:hover span {
+    color: var(--primary-color);
+}
+
 .container__menu-list-link-img-btn {
     position: absolute;
     max-width: 260px;
     border: 1px solid #ebebeb;
     position: relative;
+}
+
+.container__menu-list-link-img-btn:hover img {
+    scale: 1.1;
 }
 
 .container__menu-list-link-img-btn img {
@@ -422,6 +455,7 @@ span.content__product-link-desc {
     font-family: 'Quicksand', sans-serif;
     font-weight: 700;
     animation: slideUp linear 0.3s;
+    display: none;
 }
 
 .container__menu-list-link-name, 
@@ -448,6 +482,10 @@ span.content__product-link-desc {
 }
 
 /* CONTAINER TIME */
+.containne__time {
+    padding-bottom: 70px;
+}
+
 .container__time-left {
     position: relative;
     background-color: var(--primary-color);
@@ -495,7 +533,7 @@ span.content__product-link-desc {
     font-family: Quicksand, sans-serif;
     font-size: 1.8rem;
     background-color: var(--white-color);
-    border: none;
+    border: 1px solid var(--white-color);
     padding: 14px 40px;
     border-radius: 40px;
     margin-top: 20px;
@@ -503,8 +541,180 @@ span.content__product-link-desc {
     font-weight: 700;
 }
 
+.container__time-left-btn:hover {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+
 .container__time-right {
     background: url(../img/body__time-picture.webp) right no-repeat;
     background-size: cover;
     margin: 12px 0;
+}
+
+/* CONTAINER BANNER */
+.container__banner-list-item {
+    flex: 0 0 20%;
+    width: 20%;
+    padding: 0;
+}
+
+.container__list-link img {
+    width: 100%;
+}
+
+/* FOOTER LEFT*/
+#footer {
+    background-image: url(../img/bg_footer.webp);
+}
+
+.footer__list {
+    padding-top: 95px;
+    padding-bottom: 60px;
+    border-bottom: 1px solid var(--white-color);
+}
+
+.footer__left-content {
+    color: var(--white-color);
+    font-size: 1.6rem;
+    line-height: 1.6;
+    font-weight: 500;
+    margin-top: 28px;
+    margin-bottom: 30px;
+}
+
+.footer__left-list-item {
+    display: inline-block;
+    margin-left: 14px;
+    margin-right: 14px;
+    padding: 6px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.footer__left-list-item:hover {
+    background-color: var(--white-color);
+}
+
+.footer__left-link {
+    color: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* FOOTER MID */
+.footer__right,
+.footer__mid {
+    color: var(--white-color);
+    margin-top: 66px;
+}
+
+.footer__right-header,
+.footer__mid-header {
+    font-size: 2.4rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: var(--primary-color);
+    line-height: 1.4;
+}
+
+.footer__mid-content {
+    margin-top: 30px;
+    display: flex;
+}
+
+.footer__mid-content-icon {
+    position: relative;
+    top: 4px;
+    display: flex;
+    margin-right: 10px;
+    color: var(--primary-color);
+}
+
+.footer__right-content,
+.footer__mid-content-desc {
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.4;
+}
+
+.footer__right-content {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.footer__right-div-input {
+    width: 90%;
+    position: relative;
+}
+
+.footer__right-input {
+    height: 60px;
+    width: 100%;
+    font-size: 1.6rem;
+    border-radius: 30px;
+    padding-left: 20px;
+    padding-right: 50%;
+    outline: none;
+    border: 1px solid var(--white-color);
+}
+
+.footer__right-btn {
+    position: absolute;
+    width: 40%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.footer__right-btn {
+    font-family: 'Quicksand', sans-serif;
+    position: absolute;
+    width: 50%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    font-size: 1.8rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 30px;
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+
+.footer__right-btn:hover {
+    background-color: #666;
+}
+
+/* FOOTER LAST */
+.footer__last {
+    display: flex;
+    color: #AEAEAE;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.4rem;
+    padding: 20px 0;
+    font-weight: 600;
+}
+
+.footer__last-text {
+    position: relative;
+}
+
+.footer__last-text:first-child {
+    margin-right: 10px;
+}
+
+.footer__last-text:first-child::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    border: 1px solid #AEAEAE;
+    height: 15px;
+    margin-left: 4px;
+}
+
+.footer__last-text a {
+    color: var(--primary-color);
 }
