--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,7 @@
     color: var(--text-color);
 }
 
+.header__notify-right-items:hover .header__cart-list,
 .header__notify-right-items:hover .header__menu-login {
     display: block;
 }
@@ -67,6 +68,142 @@
     align-items: center;
     justify-content: center;
 }
+
+.header__cart-list {
+    position: absolute;
+    top: calc(100% + 12px);
+    right: -6px;
+    width: 400px;
+    background: var(--white-color);
+    border-radius: 2px;
+    box-shadow: 0 1px 5px #ccc;
+    cursor: default;
+    transform-origin: calc(100% - 30px) top;
+    animation: headerNotifyGrowth ease-in 0.2s;
+    display: none;
+    z-index: 1;
+    animation: growDown linear 0.25s;
+    transform-origin: 90% top;
+}
+
+.header__cart-list::before {
+    content: "";
+    position: absolute;
+    border: 1px solid;
+    border-width: 20px;
+    border-color: transparent transparent var(--white-color) transparent;
+    bottom: 84px;
+    right: 20px;
+    cursor: pointer;
+}
+
+.header__cart-list::after {
+    content: "";
+    position: absolute;
+    top: -10px;
+    right: 0;
+    width: 90px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.header__cart-list-heading {
+    font-size: 1.3rem;
+    font-weight: 400;
+    padding: 10px;
+    text-align: left;
+    color: var(--primary-color);
+}
+
+.header__cart-list-item{
+    max-height: 50vh;
+    overflow-y: auto;
+}
+
+.header__cart-item {
+    display: flex;
+    align-items: center;
+    padding: 8px 10px;
+    cursor: pointer;
+}
+
+.header__cart-item:hover {
+    background-color: #e9e9e9;
+}
+
+.header__cart-item-img {
+    height: 42px;
+    margin-right: 8px;
+    border: 1px solid #e8e8e8;
+}
+
+.header__cart-item-info {
+    width: 100%;
+}
+
+.header__cart-item-head{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 6px;
+}
+
+.header__cart-item-name {
+    color: var(--text-color);
+    font-size: 1.4rem;
+    flex: 1;
+    padding-right: 16px;
+    overflow: hidden;
+    display: block;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    text-align: left;
+}
+
+.header__cart-item-price {
+    color: var(--primary-color);
+    font-size: 1.4rem;
+}
+
+.header__cart-item-multiply {
+    color: #666;
+    font-size: 1.2rem;
+}
+
+.header__cart-item-quantity{
+    color: #666;
+    font-size: 1.3rem;
+}
+
+.header__cart-item-body {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header__cart-item-description {
+    color: #999;
+    font-size: 1.2rem;
+}
+
+.header__cart-item-remove {
+    font-size: 1.3rem;
+    cursor: pointer;
+    color: var(--text-color);
+}
+
+.header__cart-item-remove:hover {
+    color: var(--primary-color);
+}
+
+.header__cart-view-cart {
+    text-decoration: none;
+    font-size: 1.4rem;
+    float: right;
+    text-align: center;
+    margin: 8px 10px;
+}
+
 /* LOGIN */
 .header__menu-login {
     position: absolute;
@@ -102,12 +239,15 @@
     height: 20px;
 }
 
-.header__menu-login-items {
-    padding: 8px 10px;
-}
-
 .header__menu-login-link {
+    font-family: 'Quicksand', sans-serif;
     color: var(--text-color);
+    width: 100%;
+    height: 100%;
+    background-color: var(--white-color);
+    border: none;
+    text-align: left;
+    padding: 8px 10px;
 }
 
 .header__menu-login-items:hover .header__menu-login-link {
@@ -434,8 +574,9 @@ span.content__product-link-desc {
     position: relative;
 }
 
-.container__menu-list-link-img-btn:hover img {
+.container__menu-list-link:hover img {
     scale: 1.1;
+    transition: 0.3s;
 }
 
 .container__menu-list-link-img-btn img {
@@ -470,7 +611,7 @@ span.content__product-link-desc {
     text-transform: uppercase;
     margin-top: 18px;
     margin-bottom: 18px;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .container__menu-list-link-price {
@@ -717,4 +858,104 @@ span.content__product-link-desc {
 
 .footer__last-text a {
     color: var(--primary-color);
+}
+
+/* MODAL */
+.modal__background,
+#modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    display: none;
+    animation: slideDown linear 0.3s;
+}
+
+.modal__background {
+    background-color: rgba(0, 0, 0, 0.7);
+    display: block;
+}
+
+.modal__login {
+    position: relative;
+    width: 40%;
+    background-color: var(--white-color);
+    margin: auto;
+    padding-left: 40px;
+    padding-right: 40px;
+    border-radius: 4px;
+}
+
+.modal__login-header {
+    padding: 20px 0;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+    color: var(--primary-color);
+    margin-top: 20px;
+}
+
+.modal__login-body-input {
+    position: relative;
+    margin-bottom: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.modal__login-body-input input {
+    outline: none;
+    font-size: 1.6rem;
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    border: 1px solid rgba(0, 0, 0, 0.7);
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.modal__login-body-input label {
+    position: absolute;
+    bottom: 33px;
+    background-color: var(--white-color);
+    padding-left: 2px;
+    padding-right: 2px;
+    color: var(--primary-color);
+}
+
+.modal__login-btn {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.login-btn {
+    padding: 10px 20px;
+    font-size: 1.6rem;
+    background-color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    color: var(--white-color);
+    border-radius: 16px;
+    text-transform: uppercase;
+}
+
+.login-btn:hover {
+    background-color: rgba( 77, 138, 84, 0.9);
+}
+
+.modal__login-close {
+    position: absolute;
+    top: 10px;
+    right: 13px;
+    padding: 4px 4px 4px 0;
+    padding-left: 7px;
+    cursor: pointer;
+    background-color: var(--white-color);
+    border: none;
+}
+
+.modal__login-close:hover {
+    color: red;
 }
