--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,14 +4,19 @@
 
 /* HEADER NOTIFY */
 .header__notify {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     width: 100%;
-    height: 45px;
+    height: var(--heigth-header-notify);
     background-color: var(--primary-color);
     font-size: 1.4rem;
     font-weight: 600;
     color: var(--white-color);
     display: flex;
     align-items: center;
+    z-index: 1;
 }
 
 .header__notify-phone {
@@ -55,22 +60,52 @@
     color: var(--text-color);
 }
 
-.header__notify-right-items:hover .header__cart-list,
+.header__notify-cart:hover .header__cart-list,
 .header__notify-right-items:hover .header__menu-login {
     display: block;
 }
 
-.header__notify-right-items:hover .header__cart-no-cart {
-    display: flex;
+.header__notify-right-input-search {
+    width: 200px;
+    padding: 4px 10px;
+    position: absolute;
+    right: 0;
+    top: -12px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    animation: slideLeft linear 0.5s;
+    display: none;
 }
 
-.header__notify-right-items:last-child {
+.header__notify-wrap:hover .header__notify-right-input-search {
+    display: block;
+}
+
+@keyframes slideLeft {
+    0% {
+        opacity: 0;
+        width: 0;
+    } 100% {      
+        opacity: 1;
+        width: 200px;
+    }
+}
+
+.header__notify-cart {
     margin-right: 0;
     position: relative;
 }
 
-.header__notify-right-items:last-child::before {
-    content: "1";
+/* .show-has-cart {
+    display: block;
+} */
+
+/* .show-no-cart {
+    display: flex;
+} */
+
+.header__notify-cart-price {
     position: absolute;
     top: 10px;
     right: 70px;
@@ -87,7 +122,7 @@
 
 .header__cart-list {
     position: absolute;
-    top: calc(100% + 12px);
+    top: 30px;
     right: -6px;
     width: 400px;
     background: var(--white-color);
@@ -108,7 +143,7 @@
     border: 1px solid;
     border-width: 20px;
     border-color: transparent transparent var(--white-color) transparent;
-    bottom: 84px;
+    top: -30px;
     right: 20px;
     cursor: pointer;
 }
@@ -220,6 +255,12 @@
     margin: 8px 10px;
 }
 
+.header__cart-list-total {
+    color: var(--primary-color);
+    padding: 10px;
+    text-align: left;
+}
+
 /* LOGIN */
 .header__menu-login {
     position: absolute;
@@ -317,6 +358,7 @@
     color: var(--text-color);
     display: flex;
     align-items: center;
+    margin-top: var(--heigth-header-notify);
 }
 
 .header__nav--center {
@@ -664,6 +706,26 @@ span.content__product-link-desc {
     margin-right: 2px;
 }
 
+.container__menu-add {
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.container__menu-add-btn {
+    padding: 20px 14px;
+    text-transform: uppercase;
+    background-color: var(--primary-color);
+    border: none;
+    outline: none;
+    color: var(--white-color);
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.container__menu-add-btn:hover {
+    background-color: rgba( 77, 138, 84, 0.9);
+}
+
 /* CONTAINER TIME */
 .containne__time {
     padding-bottom: 70px;
@@ -903,7 +965,11 @@ span.content__product-link-desc {
 }
 
 /* MODAL */
+.modal-edit__background,
+.modal-add__background,
 .modal__background,
+#modal-edit,
+#modal-add,
 #modal {
     position: fixed;
     top: 0;
@@ -914,11 +980,21 @@ span.content__product-link-desc {
     animation: slideDown linear 0.3s;
 }
 
+#modal-edit,
+#modal-add,
+#modal {
+    z-index: 2;
+}
+
+.modal-edit__background,
+.modal-add__background,
 .modal__background {
     background-color: rgba(0, 0, 0, 0.7);
     display: block;
 }
 
+.modal-edit__container,
+.modal-add__container,
 .modal__login {
     position: relative;
     width: 40%;
@@ -929,6 +1005,8 @@ span.content__product-link-desc {
     border-radius: 4px;
 }
 
+.modal-edit-header,
+.modal-add-header,
 .modal__login-header {
     padding: 20px 0;
     text-align: center;
@@ -940,6 +1018,8 @@ span.content__product-link-desc {
     margin-top: 20px;
 }
 
+.modal-edit__input,
+.modal-add__input,
 .modal__login-body-input {
     position: relative;
     margin-bottom: 30px;
@@ -947,9 +1027,11 @@ span.content__product-link-desc {
     font-weight: 500;
 }
 
+.modal-edit__input input,
+.modal-add__input input,
 .modal__login-body-input input {
     outline: none;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     width: 100%;
     height: 40px;
     border-radius: 40px;
@@ -958,6 +1040,8 @@ span.content__product-link-desc {
     padding-right: 16px;
 }
 
+.modal-edit__input label,
+.modal-add__input label,
 .modal__login-body-input label {
     position: absolute;
     bottom: 33px;
@@ -967,12 +1051,23 @@ span.content__product-link-desc {
     color: var(--primary-color);
 }
 
+.modal-add__input select {
+    width: 100%;
+    padding: 10px;
+    font-size: 1.4rem;
+    outline: none;
+}
+
+.modal__edit-btn,
+.modal__add-btn,
 .modal__login-btn {
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
 }
 
+.edit-btn,
+.add-btn,
 .login-btn {
     padding: 10px 20px;
     font-size: 1.6rem;
@@ -983,10 +1078,14 @@ span.content__product-link-desc {
     text-transform: uppercase;
 }
 
+.edit-btn:hover,
+.add-btn:hover,
 .login-btn:hover {
     background-color: rgba( 77, 138, 84, 0.9);
 }
 
+.modal__edit-close,
+.modal__add-close,
 .modal__login-close {
     position: absolute;
     top: 10px;
@@ -998,6 +1097,8 @@ span.content__product-link-desc {
     border: none;
 }
 
+.modal__edit-close:hover,
+.modal__add-close:hover,
 .modal__login-close:hover {
     color: red;
 }
